// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`forgotpassword User navigates to forgotpassword 1`] = `
<KeyboardAvoidingView
  enabled={true}
  keyboardVerticalOffset={0}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <ScrollViewMock
    keyboardShouldPersistTaps="always"
    style={
      Object {
        "marginLeft": "auto",
        "marginRight": "auto",
        "maxWidth": 650,
        "padding": 16,
        "width": "50%",
      }
    }
  >
    <FocusAwareStatusBar
      backgroundColor="#1809b8"
      barStyle="light-content"
      isFocused={true}
    />
    <View
      style={
        Object {
          "backgroundColor": "#1809b8",
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "center",
            "backgroundColor": "white",
            "borderRadius": 36,
            "borderWidth": 0.1,
            "elevation": 2,
            "height": 76,
            "justifyContent": "center",
            "position": "absolute",
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 3,
              "width": 4,
            },
            "shadowOpacity": 0.2,
            "shadowRadius": 5,
            "top": 145,
            "width": 548,
            "zIndex": 8888,
          }
        }
      >
        <Text
          style={
            Object {
              "alignSelf": "center",
              "color": "#3e454f",
              "fontSize": 32,
              "lineHeight": 32,
              "opacity": 0.9,
              "textAlign": "center",
            }
          }
        >
          Forgot Password
        </Text>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#1809b8",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 42,
              "fontWeight": "bold",
              "height": 48,
              "lineHeight": 48,
              "marginLeft": 40,
              "marginTop": 40,
              "width": 646,
            }
          }
        >
          Building Blocks
        </Text>
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 24,
              "height": 88,
              "lineHeight": 28,
              "marginLeft": 40,
              "marginTop": 12,
              "width": 646,
            }
          }
        >
          freemium
        </Text>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#fff",
            "borderBottomColor": "#fff",
            "borderBottomWidth": 1,
            "borderTopLeftRadius": 20,
            "borderTopRightRadius": 20,
            "elevation": 2,
            "marginTop": 44,
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 2,
              "width": 4,
            },
            "shadowOpacity": 0.1,
            "shadowRadius": 1,
            "zIndex": 1000,
          }
        }
      >
        <Text
          style={
            Object {
              "alignSelf": "center",
              "color": "#3e454f",
              "fontSize": 30,
              "lineHeight": 36,
              "marginTop": 46,
              "textAlign": "center",
              "width": 548,
            }
          }
        >
          Enter your registered Email and we’ll sent you OTP to reset your password
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "marginTop": 58,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#fff",
                  "borderColor": "#1809b8",
                  "borderRadius": 40,
                  "borderWidth": 0.8,
                  "flexDirection": "row",
                  "height": 80,
                  "justifyContent": "center",
                  "width": 624,
                },
                Object {
                  "borderColor": "#dbdbdb",
                },
              ]
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../packages/blocks/studio-store-ecommerce-theme/assets/icon/email.png",
                }
              }
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "height": 28.6,
                    "marginLeft": 30,
                    "resizeMode": "stretch",
                    "width": 45.4,
                  },
                  Object {
                    "tintColor": "#3b5898",
                  },
                ]
              }
            />
            <TextInput
              allowFontScaling={true}
              autoCapitalize="none"
              editable={true}
              onChangeText={[Function]}
              onFocus={[Function]}
              placeholder="Email"
              placeholderTextColor="#8b8f95"
              rejectResponderTermination={true}
              secureTextEntry={false}
              style={
                Array [
                  Object {
                    "color": "#004491",
                    "fontSize": 30,
                    "height": 80,
                    "lineHeight": 36,
                    "marginLeft": 36.6,
                    "width": 512,
                  },
                  Object {
                    "color": "#3b5898",
                  },
                ]
              }
              underlineColorAndroid="transparent"
              value=""
            />
          </View>
          <TouchableOpacity
            activeOpacity={0.2}
            disabled={true}
            onPress={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#320bf4",
                  "borderRadius": 22,
                  "height": 44,
                  "justifyContent": "center",
                  "marginBottom": 26,
                  "marginTop": 29,
                  "width": 312,
                },
                Object {
                  "backgroundColor": "#320bf4",
                  "opacity": 0.5,
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#fff",
                  "fontSize": 14,
                  "letterSpacing": 1,
                  "lineHeight": 16,
                  "opacity": 0.9,
                }
              }
            >
              SUBMIT
            </Text>
          </TouchableOpacity>
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#f6f8fa",
            "marginTop": -2,
          }
        }
      >
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
        >
          <Text
            style={
              Object {
                "color": "#3e454f",
                "fontSize": 30,
                "lineHeight": 36,
                "marginBottom": 61,
                "marginTop": 33,
                "textAlign": "center",
              }
            }
          >
            Skip & Continue as Guest
          </Text>
        </TouchableOpacity>
      </View>
    </View>
    <CustomErrorModal
      hideErrorModal={[Function]}
      isShowError={false}
      message=""
      showModal={false}
    />
  </ScrollViewMock>
  <ApplicationLoader
    isFetching={false}
  />
</KeyboardAvoidingView>
`;

exports[`forgotpassword User navigates to forgotpassword 2`] = `
<KeyboardAvoidingView
  enabled={true}
  keyboardVerticalOffset={0}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <ScrollViewMock
    keyboardShouldPersistTaps="always"
    style={
      Object {
        "marginLeft": "auto",
        "marginRight": "auto",
        "maxWidth": 650,
        "padding": 16,
        "width": "50%",
      }
    }
  >
    <FocusAwareStatusBar
      backgroundColor="#1809b8"
      barStyle="light-content"
      isFocused={true}
    />
    <View
      style={
        Object {
          "backgroundColor": "#1809b8",
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "center",
            "backgroundColor": "white",
            "borderRadius": 36,
            "borderWidth": 0.1,
            "elevation": 2,
            "height": 76,
            "justifyContent": "center",
            "position": "absolute",
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 3,
              "width": 4,
            },
            "shadowOpacity": 0.2,
            "shadowRadius": 5,
            "top": 145,
            "width": 548,
            "zIndex": 8888,
          }
        }
      >
        <Text
          style={
            Object {
              "alignSelf": "center",
              "color": "#3e454f",
              "fontSize": 32,
              "lineHeight": 32,
              "opacity": 0.9,
              "textAlign": "center",
            }
          }
        >
          Forgot Password
        </Text>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#1809b8",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 42,
              "fontWeight": "bold",
              "height": 48,
              "lineHeight": 48,
              "marginLeft": 40,
              "marginTop": 40,
              "width": 646,
            }
          }
        >
          Building Blocks
        </Text>
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 24,
              "height": 88,
              "lineHeight": 28,
              "marginLeft": 40,
              "marginTop": 12,
              "width": 646,
            }
          }
        >
          freemium
        </Text>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#fff",
            "borderBottomColor": "#fff",
            "borderBottomWidth": 1,
            "borderTopLeftRadius": 20,
            "borderTopRightRadius": 20,
            "elevation": 2,
            "marginTop": 44,
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 2,
              "width": 4,
            },
            "shadowOpacity": 0.1,
            "shadowRadius": 1,
            "zIndex": 1000,
          }
        }
      >
        <Text
          style={
            Object {
              "alignSelf": "center",
              "color": "#3e454f",
              "fontSize": 30,
              "lineHeight": 36,
              "marginTop": 46,
              "textAlign": "center",
              "width": 548,
            }
          }
        >
          Enter your registered Email and we’ll sent you OTP to reset your password
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "marginTop": 58,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#fff",
                  "borderColor": "#1809b8",
                  "borderRadius": 40,
                  "borderWidth": 0.8,
                  "flexDirection": "row",
                  "height": 80,
                  "justifyContent": "center",
                  "width": 624,
                },
                Object {
                  "borderColor": "#dbdbdb",
                },
              ]
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../packages/blocks/studio-store-ecommerce-theme/assets/icon/email.png",
                }
              }
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "height": 28.6,
                    "marginLeft": 30,
                    "resizeMode": "stretch",
                    "width": 45.4,
                  },
                  Object {
                    "tintColor": "#3b5898",
                  },
                ]
              }
            />
            <TextInput
              allowFontScaling={true}
              autoCapitalize="none"
              editable={true}
              onChangeText={[Function]}
              onFocus={[Function]}
              placeholder="Email"
              placeholderTextColor="#8b8f95"
              rejectResponderTermination={true}
              secureTextEntry={false}
              style={
                Array [
                  Object {
                    "color": "#004491",
                    "fontSize": 30,
                    "height": 80,
                    "lineHeight": 36,
                    "marginLeft": 36.6,
                    "width": 512,
                  },
                  Object {
                    "color": "#3b5898",
                  },
                ]
              }
              underlineColorAndroid="transparent"
              value=""
            />
          </View>
          <TouchableOpacity
            activeOpacity={0.2}
            disabled={true}
            onPress={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#320bf4",
                  "borderRadius": 22,
                  "height": 44,
                  "justifyContent": "center",
                  "marginBottom": 26,
                  "marginTop": 29,
                  "width": 312,
                },
                Object {
                  "backgroundColor": "#320bf4",
                  "opacity": 0.5,
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#fff",
                  "fontSize": 14,
                  "letterSpacing": 1,
                  "lineHeight": 16,
                  "opacity": 0.9,
                }
              }
            >
              SUBMIT
            </Text>
          </TouchableOpacity>
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#f6f8fa",
            "marginTop": -2,
          }
        }
      >
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
        >
          <Text
            style={
              Object {
                "color": "#3e454f",
                "fontSize": 30,
                "lineHeight": 36,
                "marginBottom": 61,
                "marginTop": 33,
                "textAlign": "center",
              }
            }
          >
            Skip & Continue as Guest
          </Text>
        </TouchableOpacity>
      </View>
    </View>
    <CustomErrorModal
      hideErrorModal={[Function]}
      isShowError={false}
      message=""
      showModal={false}
    />
  </ScrollViewMock>
  <ApplicationLoader
    isFetching={false}
  />
</KeyboardAvoidingView>
`;

exports[`forgotpassword User navigates to newpassword 1`] = `
<KeyboardAvoidingView
  enabled={true}
  keyboardVerticalOffset={0}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <ScrollViewMock
    keyboardShouldPersistTaps="always"
    style={
      Object {
        "backgroundColor": "#F7F8FA",
        "flex": 1,
        "marginLeft": "auto",
        "marginRight": "auto",
        "maxWidth": 650,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#1809b8",
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "center",
            "backgroundColor": "white",
            "borderRadius": 36,
            "borderWidth": 0.1,
            "elevation": 2,
            "height": 76,
            "justifyContent": "center",
            "position": "absolute",
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 3,
              "width": 4,
            },
            "shadowOpacity": 0.2,
            "shadowRadius": 5,
            "top": 145,
            "width": 548,
            "zIndex": 8888,
          }
        }
      >
        <Text
          style={
            Object {
              "alignSelf": "center",
              "color": "#3e454f",
              "fontSize": 32,
              "lineHeight": 32,
              "opacity": 0.9,
              "textAlign": "center",
            }
          }
        >
          Create New Password
        </Text>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#1809b8",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 42,
              "fontWeight": "bold",
              "height": 48,
              "lineHeight": 48,
              "marginLeft": 40,
              "marginTop": 40,
              "width": 646,
            }
          }
        >
          Building Blocks
        </Text>
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 24,
              "height": 88,
              "lineHeight": 28,
              "marginLeft": 40,
              "marginTop": 12,
              "width": 646,
            }
          }
        >
          freemium
        </Text>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#fff",
            "borderBottomColor": "#fff",
            "borderBottomWidth": 1,
            "borderTopLeftRadius": 20,
            "borderTopRightRadius": 20,
            "elevation": 2,
            "marginTop": 44,
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 2,
              "width": 4,
            },
            "shadowOpacity": 0.1,
            "shadowRadius": 1,
            "zIndex": 1000,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "marginTop": 100,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#fff",
                  "borderColor": "#ffffff",
                  "borderRadius": 40,
                  "borderWidth": 0.8,
                  "flexDirection": "row",
                  "height": 80,
                  "justifyContent": "center",
                  "width": 624,
                },
                Object {
                  "marginTop": 13,
                },
              ]
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../packages/blocks/studio-store-ecommerce-theme/assets/icon/door.png",
                }
              }
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "height": 23.4,
                    "marginLeft": 30,
                    "resizeMode": "stretch",
                    "width": 47.8,
                  },
                  Object {
                    "tintColor": "#3e454f",
                  },
                ]
              }
            />
            <TextInput
              allowFontScaling={true}
              autoCapitalize="none"
              onChangeText={[Function]}
              onFocus={[Function]}
              placeholder="Enter New Password"
              placeholderTextColor="#3e454f"
              rejectResponderTermination={true}
              returnKeyType="done"
              secureTextEntry={true}
              style={
                Array [
                  Object {
                    "color": "#1809b8",
                    "fontSize": 30,
                    "height": 80,
                    "lineHeight": 36,
                    "marginLeft": 36.6,
                    "width": 445.6,
                  },
                  Object {
                    "color": "#3e454f",
                  },
                ]
              }
              underlineColorAndroid="transparent"
              value=""
            />
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
              style={
                Object {
                  "marginRight": 33.6,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../packages/blocks/studio-store-ecommerce-theme/assets/icon/eye.png",
                  }
                }
                style={Object {}}
              />
            </TouchableOpacity>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#fff",
                  "borderColor": "#ffffff",
                  "borderRadius": 40,
                  "borderWidth": 0.8,
                  "flexDirection": "row",
                  "height": 80,
                  "justifyContent": "center",
                  "width": 624,
                },
                Object {
                  "marginTop": 13,
                },
              ]
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../packages/blocks/studio-store-ecommerce-theme/assets/icon/door.png",
                }
              }
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "height": 23.4,
                    "marginLeft": 30,
                    "resizeMode": "stretch",
                    "width": 47.8,
                  },
                  Object {
                    "tintColor": "#3e454f",
                  },
                ]
              }
            />
            <TextInput
              allowFontScaling={true}
              autoCapitalize="none"
              onChangeText={[Function]}
              onFocus={[Function]}
              placeholder="Confirm New Password"
              placeholderTextColor="#3e454f"
              rejectResponderTermination={true}
              returnKeyType="done"
              secureTextEntry={true}
              style={
                Array [
                  Object {
                    "color": "#1809b8",
                    "fontSize": 30,
                    "height": 80,
                    "lineHeight": 36,
                    "marginLeft": 36.6,
                    "width": 445.6,
                  },
                  Object {
                    "color": "#3e454f",
                  },
                ]
              }
              underlineColorAndroid="transparent"
              value=""
            />
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
              style={
                Object {
                  "marginRight": 33.6,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../packages/blocks/studio-store-ecommerce-theme/assets/icon/eye.png",
                  }
                }
                style={Object {}}
              />
            </TouchableOpacity>
          </View>
          <TouchableOpacity
            activeOpacity={0.2}
            disabled={true}
            onPress={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#320bf4",
                  "borderRadius": 22,
                  "height": 44,
                  "justifyContent": "center",
                  "marginBottom": 26,
                  "marginTop": 29,
                  "width": 312,
                },
                Object {
                  "backgroundColor": "#320bf4",
                  "opacity": 0.5,
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#fff",
                  "fontSize": 14,
                  "letterSpacing": 1,
                  "lineHeight": 16,
                  "opacity": 0.9,
                }
              }
            >
              RESET PASSWORD
            </Text>
          </TouchableOpacity>
        </View>
      </View>
    </View>
    <ApplicationLoader
      isFetching={false}
    />
    <CustomErrorModal
      hideErrorModal={[Function]}
      isShowError={false}
      message=""
      showModal={false}
    />
  </ScrollViewMock>
</KeyboardAvoidingView>
`;

exports[`forgotpassword User navigates to newpassword 2`] = `
<KeyboardAvoidingView
  enabled={true}
  keyboardVerticalOffset={0}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <ScrollViewMock
    keyboardShouldPersistTaps="always"
    style={
      Object {
        "backgroundColor": "#F7F8FA",
        "flex": 1,
        "marginLeft": "auto",
        "marginRight": "auto",
        "maxWidth": 650,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#1809b8",
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "center",
            "backgroundColor": "white",
            "borderRadius": 36,
            "borderWidth": 0.1,
            "elevation": 2,
            "height": 76,
            "justifyContent": "center",
            "position": "absolute",
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 3,
              "width": 4,
            },
            "shadowOpacity": 0.2,
            "shadowRadius": 5,
            "top": 145,
            "width": 548,
            "zIndex": 8888,
          }
        }
      >
        <Text
          style={
            Object {
              "alignSelf": "center",
              "color": "#3e454f",
              "fontSize": 32,
              "lineHeight": 32,
              "opacity": 0.9,
              "textAlign": "center",
            }
          }
        >
          Create New Password
        </Text>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#1809b8",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 42,
              "fontWeight": "bold",
              "height": 48,
              "lineHeight": 48,
              "marginLeft": 40,
              "marginTop": 40,
              "width": 646,
            }
          }
        >
          Building Blocks
        </Text>
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 24,
              "height": 88,
              "lineHeight": 28,
              "marginLeft": 40,
              "marginTop": 12,
              "width": 646,
            }
          }
        >
          freemium
        </Text>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#fff",
            "borderBottomColor": "#fff",
            "borderBottomWidth": 1,
            "borderTopLeftRadius": 20,
            "borderTopRightRadius": 20,
            "elevation": 2,
            "marginTop": 44,
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 2,
              "width": 4,
            },
            "shadowOpacity": 0.1,
            "shadowRadius": 1,
            "zIndex": 1000,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "marginTop": 100,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#fff",
                  "borderColor": "#ffffff",
                  "borderRadius": 40,
                  "borderWidth": 0.8,
                  "flexDirection": "row",
                  "height": 80,
                  "justifyContent": "center",
                  "width": 624,
                },
                Object {
                  "marginTop": 13,
                },
              ]
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../packages/blocks/studio-store-ecommerce-theme/assets/icon/door.png",
                }
              }
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "height": 23.4,
                    "marginLeft": 30,
                    "resizeMode": "stretch",
                    "width": 47.8,
                  },
                  Object {
                    "tintColor": "#3e454f",
                  },
                ]
              }
            />
            <TextInput
              allowFontScaling={true}
              autoCapitalize="none"
              onChangeText={[Function]}
              onFocus={[Function]}
              placeholder="Enter New Password"
              placeholderTextColor="#3e454f"
              rejectResponderTermination={true}
              returnKeyType="done"
              secureTextEntry={true}
              style={
                Array [
                  Object {
                    "color": "#1809b8",
                    "fontSize": 30,
                    "height": 80,
                    "lineHeight": 36,
                    "marginLeft": 36.6,
                    "width": 445.6,
                  },
                  Object {
                    "color": "#3e454f",
                  },
                ]
              }
              underlineColorAndroid="transparent"
              value=""
            />
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
              style={
                Object {
                  "marginRight": 33.6,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../packages/blocks/studio-store-ecommerce-theme/assets/icon/eye.png",
                  }
                }
                style={Object {}}
              />
            </TouchableOpacity>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#fff",
                  "borderColor": "#ffffff",
                  "borderRadius": 40,
                  "borderWidth": 0.8,
                  "flexDirection": "row",
                  "height": 80,
                  "justifyContent": "center",
                  "width": 624,
                },
                Object {
                  "marginTop": 13,
                },
              ]
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../packages/blocks/studio-store-ecommerce-theme/assets/icon/door.png",
                }
              }
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "height": 23.4,
                    "marginLeft": 30,
                    "resizeMode": "stretch",
                    "width": 47.8,
                  },
                  Object {
                    "tintColor": "#3e454f",
                  },
                ]
              }
            />
            <TextInput
              allowFontScaling={true}
              autoCapitalize="none"
              onChangeText={[Function]}
              onFocus={[Function]}
              placeholder="Confirm New Password"
              placeholderTextColor="#3e454f"
              rejectResponderTermination={true}
              returnKeyType="done"
              secureTextEntry={true}
              style={
                Array [
                  Object {
                    "color": "#1809b8",
                    "fontSize": 30,
                    "height": 80,
                    "lineHeight": 36,
                    "marginLeft": 36.6,
                    "width": 445.6,
                  },
                  Object {
                    "color": "#3e454f",
                  },
                ]
              }
              underlineColorAndroid="transparent"
              value=""
            />
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
              style={
                Object {
                  "marginRight": 33.6,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../packages/blocks/studio-store-ecommerce-theme/assets/icon/eye.png",
                  }
                }
                style={Object {}}
              />
            </TouchableOpacity>
          </View>
          <TouchableOpacity
            activeOpacity={0.2}
            disabled={true}
            onPress={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#320bf4",
                  "borderRadius": 22,
                  "height": 44,
                  "justifyContent": "center",
                  "marginBottom": 26,
                  "marginTop": 29,
                  "width": 312,
                },
                Object {
                  "backgroundColor": "#320bf4",
                  "opacity": 0.5,
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#fff",
                  "fontSize": 14,
                  "letterSpacing": 1,
                  "lineHeight": 16,
                  "opacity": 0.9,
                }
              }
            >
              RESET PASSWORD
            </Text>
          </TouchableOpacity>
        </View>
      </View>
    </View>
    <ApplicationLoader
      isFetching={false}
    />
    <CustomErrorModal
      hideErrorModal={[Function]}
      isShowError={false}
      message=""
      showModal={false}
    />
  </ScrollViewMock>
</KeyboardAvoidingView>
`;
